# mad

./: .bezel-manifest.txt  .cores-manifest.txt  .gitignore  ANDROID-DEV.md  ANDROID.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTROLLER-ROUTER-README.md  CREDITS.md  FAQ-ANDROID.md  FAQ.md  FIX-PLAN.md  GUIDE.md  HAIKU.md  INSTALL-DEV.md  INSTALL.md  LICENSE  LINUX-AARCH64-DEV.md  LINUX-AARCH64.md  MAD.sh  ON-DECK-CHECKLIST.md  README.md  REVIEW-FINDINGS.md  ROADMAP.md  THEMES-DEV.md  THEMES.md  USERGUIDE-DEV.md  USERGUIDE.md  apply-staged-restore.sh  azahar.sh  cemu.sh  clean-manual-cruft.py  controller-policy.example.toml  controller-policy.toml  controller-router-wrap.sh  controller-router.py  controller-setup.sh  convert-pixel-systems.py  convert-pixel-theme.py  (+100 more)
data/: lindbergh-profiles.json  mugen-twins.gamecontrollerdb
deck-docs/: AUDIT-2026-06-15.md  CLEANUP-FULLSCOPE-PENDING.md  cemu-settings-and-packs.md  codebase-audit-2026-06-25.md  dolphin-ini-encodings.md  esde-controller-hotplug-freeze.md  esde-find-rules.md  esde-media-directory.md  github-actions-appimage-ci.md  hypseus-daphne-import.md  installer-tui-prior-art.md  mad-backend-protocol.md  model2-emulator-ini.md  mugen-ikemen-symlinks.md  mugen.md  on-the-go.md  pcsx2-ini-encodings.md  pcsx2x6-usb-jvs-encodings.md  play-emulator-install.md  python-curses-tty.md  retroarch-sdl2-handheld-input.md  rpcs3-god-of-war-collection.md  standalone-emulator-settings-encodings.md  standalone-input-binding-formats.md  supermodel-ini.md  tkinter-evdev-crashes.md  wiimote.md  xarcade-usb-identity.md
es-app/: CMakeLists.txt
es-app/assets/: ES-DE.rc  ES-DE_Info.plist  ES-DE_LICENSE_Windows  ES-DE_LICENSE_macOS  Windows_Portable_README.txt  es_de-3.4.0.recipe  org.es_de.frontend.appdata.xml
es-app/src/: ApplicationUpdater.cpp  ApplicationUpdater.h  FileData.cpp  FileData.h  FileSorts.cpp  FileSorts.h  GamescopeFocus.cpp  GamescopeFocus.h  MediaViewer.cpp  MetaData.cpp  MiximageGenerator.cpp  PDFViewer.cpp  PDFViewer.h  PlatformId.cpp  PlatformId.h  Screensaver.cpp  Screensaver.h  SystemData.cpp  SystemData.h  main.cpp
es-app/src/guis/: GuiAlternativeEmulators.h  GuiApplicationUpdater.cpp  GuiApplicationUpdater.h  GuiCollectionSystemsOptions.cpp  GuiGameImporter.cpp  GuiGameImporter.h  GuiGamelistFilter.cpp  GuiGamelistFilter.h  GuiGamelistOptions.cpp  GuiGamelistOptions.h  GuiLaunchScreen.cpp  GuiLaunchScreen.h  GuiMediaViewerOptions.cpp  GuiMenu.cpp  GuiMenu.h  GuiMetaDataEd.cpp  GuiMetaDataEd.h  GuiOfflineGenerator.cpp  GuiOfflineGenerator.h  GuiOrphanedDataCleanup.cpp  GuiOrphanedDataCleanup.h  GuiScraperMenu.cpp  GuiScraperMenu.h  GuiScraperMulti.cpp  GuiScraperMulti.h  GuiScraperSearch.cpp  GuiScraperSearch.h  GuiScraperSingle.cpp  GuiScraperSingle.h  GuiScreensaverOptions.cpp  GuiSettings.cpp  GuiSettings.h  GuiSystemStatusOptions.cpp  GuiSystemStatusOptions.h  GuiThemeDownloader.cpp  GuiThemeDownloader.h
es-app/src/guis/mad/: GuiMadCaptureModal.cpp  GuiMadCaptureModal.h  GuiMadFolderPicker.cpp  GuiMadFolderPicker.h  GuiMadPanel.cpp  GuiMadPanel.h  MadBackend.cpp  MadBackend.h  MadFooter.cpp  MadFooter.h  MadJson.h  MadMsgBox.h  MadPage.cpp  MadPage.h  MadPageUtil.h  MadSidebar.cpp  MadSidebar.h  MadTheme.cpp  MadTheme.h  MadWiiBridge.cpp  MadWiiBridge.h
es-app/src/guis/mad/pages/: GuiMadPageBackends.cpp  GuiMadPageBackends.h  GuiMadPageBackup.cpp  GuiMadPageBackup.h  GuiMadPageBezelAssign.cpp  GuiMadPageBezelAssign.h  GuiMadPageBezelPerGame.cpp  GuiMadPageBezelPerGame.h  GuiMadPageBezelProject.cpp  GuiMadPageBezelProject.h  GuiMadPageBezelReviewQueue.cpp  GuiMadPageBezelReviewQueue.h  GuiMadPageCloudProgress.cpp  GuiMadPageCloudProgress.h  GuiMadPageDaphne.cpp  GuiMadPageDaphne.h  GuiMadPageDeviceBlacklist.cpp  GuiMadPageDeviceBlacklist.h  GuiMadPageEmuInputMap.cpp  GuiMadPageEmuInputMap.h  GuiMadPageEmuSettings.cpp  GuiMadPageEmuSettings.h  GuiMadPageGamePicker.cpp  GuiMadPageGamePicker.h  GuiMadPageGamepads.cpp  GuiMadPageGamepads.h  GuiMadPageLightgun.cpp  GuiMadPageLightgun.h  GuiMadPageLindbergh.cpp  GuiMadPageLindbergh.h  GuiMadPageLindberghPadMap.cpp  GuiMadPageLindberghPadMap.h  GuiMadPageLindberghPads.cpp  GuiMadPageLindberghPads.h  GuiMadPageModel2.cpp  GuiMadPageModel2.h  GuiMadPagePadsPriority.cpp  GuiMadPagePadsPriority.h  GuiMadPagePergameBrowser.cpp  GuiMadPagePergameBrowser.h  (+36 more)
es-app/src/guis/mad/widgets/: MadChipRow.cpp  MadChipRow.h  MadPlayerSlots.cpp  MadPlayerSlots.h  MadProgressBar.cpp  MadProgressBar.h  MadReorderList.cpp  MadReorderList.h  MadScrollView.cpp  MadScrollView.h  MadSpriteCanvas.cpp  MadSpriteCanvas.h  MadStepper.cpp  MadStepper.h  MadTileGrid.cpp  MadTileGrid.h  MadToggleList.cpp  MadToggleList.h  MadVideoComponent.h  MadVirtualList.cpp  MadVirtualList.h
es-app/src/scrapers/: GamesDBJSONScraper.cpp  GamesDBJSONScraper.h  Scraper.cpp  Scraper.h  ScreenScraper.cpp  ScreenScraper.h
es-app/src/views/: GamelistBase.cpp  GamelistBase.h  GamelistView.cpp  GamelistView.h  SystemView.cpp  SystemView.h  ViewController.cpp  ViewController.h
es-core/: CMakeLists.txt
es-pdf-converter/: CMakeLists.txt
hooks/: launchscreen-pack.sh
lib/: __init__.py  bezel_cfg.py  bezel_discover.py  bezel_match.py  cemu_cfg.py  cemu_input_dock.py  cemu_profiles.py  cemu_res.py  cemu_seat.py  classify.py  daphne_input.py  deck_power.py  deck_state.py  device_binds.py  devices.py  dolphin_cfg.py  dolphin_gameids.py  dolphin_gc_dock.py  dolphin_gc_pads.py  dolphin_profiles.py  dolphin_res.py  dolphin_wii_pads.py  dolphin_wii_profiles.py  dolphin_wii_source.py  dolphin_wii_tdb.py  eden_cfg.py  emudeck-shim.sh  es_collections.py  es_find_rules.py  es_gamelist.py  es_input.py  es_systems.py  es_systems_standalone.py  es_systems_wrap.py  esde_paths.py  esde_settings.py  fsutil.py  gui_sound.py  gui_theme.py  gui_widgets.py  (+50 more)
licenses/: linear-es-de
locale/: CMakeLists.txt  es-de.pot  languages
review-findings/: fixplan-raw.json  wave1-raw.json  wave2-raw.json  wave3-raw.json
sinden-shim/: sinden-smooth.c
tests/: __init__.py  _ci.py  _fakes.py  _harness.py  _menu_capture.py  scenarios.py  (+207 more)
(+398 files in other folders)
